# numerai_era_data

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  publish.yml
src/numerai_era_data/: date_utils.py  era_data_api.py
src/numerai_era_data/data_sources/: base_data_source.py  ds_bls.py  ds_calendar.py  ds_markets.py  ds_wei.py
tests/: date_utils_test.py  era_data_api_test.py
tests/data_sources/: ds_bls_test.py  ds_calendar_test.py  ds_markets_test.py  ds_wei_test.py
